# AERUMENTIS

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase2_knowledge.py  003_phase3_operations.py
scripts/: setup.sh
src/aerumentis/: main.py  worker.py
src/aerumentis/api/: exceptions.py
src/aerumentis/api/v1/: auth.py  chat.py  documents.py  health.py
src/aerumentis/core/: config.py  database.py  hashing.py  logging.py  security.py
src/aerumentis/models/: database_models.py  phase2_models.py  phase3_models.py  schemas.py
src/aerumentis/modules/knowledge/routers/: knowledge.py
src/aerumentis/modules/maintenance/routers/: maintenance.py
src/aerumentis/modules/operations/routers/: operations.py
src/aerumentis/services/: api_key_service.py  chat_history_service.py  document_metadata_service.py  document_processor.py  embedding_service.py  ingestion_service.py  knowledge_service.py  llm_service.py  operations_service.py  rag_engine.py  vector_store.py
tests/integration/: test_api.py  test_knowledge_api.py  test_operations_api.py
tests/unit/: test_api_keys.py  test_config.py  test_document_processor.py  test_knowledge_service.py  test_operations_service.py  test_rag_engine.py  test_security.py
