[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerumentis"
version = "0.1.0"
description = "Aerumentis — AI-powered operational brain for airports, maintenance teams, and airlines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Aerumentis Team" }]
keywords = ["aerospace", "aviation", "maintenance", "AI", "RAG", "airport-operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Aerospace Industry",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.111.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.33.0",
    "python-multipart>=0.0.9",
    "SQLAlchemy[asyncio]>=2.0.30,<2.1.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0,<1.16.0",
    "qdrant-client>=1.10.0,<2.0.0",
    "openai>=1.35.0,<2.0.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-community>=0.3.0,<0.4.0",
    "pypdf>=4.0.0,<5.0.0",
    "pdfplumber>=0.11.0,<0.12.0",
    "python-docx>=1.1.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "markdown>=3.6.0,<4.0.0",
    "tiktoken>=0.7.0",
    "nltk>=3.8.0,<4.0.0",
    "redis[hiredis]>=5.0.0,<6.0.0",
    "celery[redis]>=5.4.0,<5.5.0",
    "pyjwt[crypto]>=2.9.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "email-validator>=2.2.0",
    "httpx>=0.27.0,<0.29.0",
    "tenacity>=8.4.0,<9.0.0",
    "structlog>=24.1.0,<25.0.0",
    "prometheus-client>=0.20.0,<0.21.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.1",
    "orjson>=3.10.0",
    "aiofiles>=24.1.0",
    "inflection>=0.5.0",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "httpx>=0.27.0,<0.29.0",
    "respx>=0.21.0,<0.22.0",
    "ruff>=0.5.0,<0.7.0",
    "mypy>=1.10.0,<1.14.0",
    "pre-commit>=3.7.0,<4.0.0",
    "types-pyyaml",
    "types-redis",
    "ipython>=8.20.0",
]

[project.urls]
Homepage = "https://github.com/aerumentis/AERUMENTIS"
Repository = "https://github.com/aerumentis/AERUMENTIS"
Documentation = "https://docs.aerumentis.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]
